[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["Vinicius Melette Morila <vinicius.morila@luizalabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-cors = "^5.0.1"
werkzeug = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest -s -x --cov=e_commerce -VV"
coverage = "coverage html"
start = "python3 app.py"